# atlas-visual-engine

./: .gitignore  README.md  pyproject.toml
atlas/: __init__.py
atlas/api/: __init__.py  scene.py
atlas/constants/: __init__.py  colors.py  config.py  dimensions.py  export.py  tokens.py  typography.py
atlas/core/: canvas.py  renderer.py  scene.py  spec_check.py
atlas/elements/: __init__.py  arrow.py  block.py  floor.py  incline.py  rope.py
atlas/fbd/: __init__.py  helpers.py
atlas/fbd/diagrams/: n3l001.py  n3l002.py  n3l003.py  n3l004.py  n3l005.py
atlas/geometry/: __init__.py  arrow_geo.py  block_geo.py  incline_geo.py  vectors.py
atlas/physics/: __init__.py  force.py  incline.py
atlas/primitives/: line.py  primitive.py
atlas/renderer/: __init__.py  canvas.py
atlas/styles/: __init__.py  arrow_style.py  block_style.py  canvas_style.py  floor_style.py  incline_style.py  rope_style.py
atlas/visual/: arrow.py  block.py  floor.py  incline.py  rope.py
atlas_specs/: AEC-001.md  DECISIONS.md  ELEMENT_SPEC_v2.md  README.md
docs/: ARCHITECTURE.md  CORE_ARCHITECTURE.md  PROJECT_CONTEXT.md  ROADMAP.md  SESSION_LOG.md
examples/: example_all_constants.py  example_canvas.py  example_config.py  example_constants.py  example_dimensions.py  example_export.py  example_line.py  example_renderer.py  example_scene.py  test_matplotlib.py
tests/: test_atlas_arrow.py  test_atlas_block.py  test_atlas_floor.py  test_atlas_incline.py  test_atlas_rope.py  test_block_contact.py  test_composition.py  test_physics_scene.py
