[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-visual-engine"
version = "0.1.0"
description = "Production-quality educational graphics engine for Physics, Chemistry, and Mathematics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sunil Gupta" }
]

[tool.setuptools]
packages = ["atlas"]